단일 table 조회 jap QueryDSL로 수정.